# fnc

./: .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  DEVGUIDE.rst  README.rst  pyproject.toml  setup.cfg  tasks.py  tox.ini
.github/workflows/: main.yml
docs/: api.rst  conf.py  index.rst  installation.rst  versioning.rst
src/fnc/: __init__.py  __version__.py  helpers.py  mappings.py  sequences.py  utilities.py
tests/: conftest.py  helpers.py  test_mappings.py  test_sequences.py  test_utilities.py
