[metadata]
name = fnc
version = 0.3.0
author = Derrick Gilland
author_email = dgilland@gmail.com
url = https://github.com/dgilland/fnc
description = Functional programming in Python with generators and other utilities.
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = fnc functional functional-programming generators utility
license = MIT License
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
install_requires =

[options.packages.find]
where = src

[options.extras_require]
dev =
    coverage
    flake8
    pylint
    pytest
    pytest-cov
    Sphinx
    sphinx-rtd-theme
    tox
    twine
    wheel


[bdist_wheel]
python-tag = py3
